new_main_test.log
Traceback (most recent call last):
  File "/root/master_kees/new_main.py", line 9, in <module>
    from clients.julianalaan_39.heatpump_fixed import run_heatpump
  File "/root/master_kees/clients/julianalaan_39/heatpump_fixed.py", line 1
    To modify the `heatpump.py` file so that it processes telemetry data and sets states as per the logged conditions, you need to update the `process_data` and `run_heatpump` functions. Here's what the updated `heatpump.py` could look like:
                                                                                                                                                                                               ^
SyntaxError: unterminated string literal (detected at line 1)
